# storyvault

./: .editorconfig  .prettierignore  Cargo.toml  justfile  package.json  pnpm-lock.yaml  storyvault.yaml  turbo.json
apps/backend/: .gitignore  Cargo.toml  package.json  storyvault.yaml
apps/backend/data/audiobooks/Moby Dick/: index.yaml
apps/backend/data/audiobooks/Pride and Prejudice/: index.yaml
apps/backend/data/audiobooks/Problem InvalidDataFormat/: index.yaml
apps/backend/data/audiobooks/Problem InvalidYamlFormat/: index.yaml
apps/backend/data/audiobooks/Problem MissingAudioFile/: index.yaml
apps/backend/data/audiobooks/Problem MissingCover/: index.yaml
apps/backend/data/audiobooks/Problem UnableToExtractDuration/: index.yaml
apps/backend/migrations/: 1_init.sql  2_audiobook_user_history.sql
apps/backend/src/: app.rs  auth.rs  config.rs  db.rs  events.rs  frontend.rs  iso8601.rs  main.rs  scan.rs  state.rs  user.rs
apps/backend/src/events/: events.rs  listener.rs  mod.rs  queue.rs  store.rs
apps/backend/src/handlers/: activity.rs  audiobook.rs  audiobook_cover.rs  audiobook_list.rs  audiobook_position.rs  audiobook_recent.rs  audiobook_stream.rs  auth.rs  auth_me.rs  favicon.rs  health.rs  index.rs  mod.rs  problems.rs  user.rs
apps/backend/src/projections/: audiobook_user_history.rs  audiobook_user_progress.rs  mod.rs
apps/backend/src/scan/: metadata.rs  mod.rs
apps/backend/tests/: audiobook_cover.hurl  audiobook_list.hurl  audiobook_position.hurl  audiobook_stream.hurl  auth.hurl  health.hurl  index.hurl  user.hurl
src/: app.rs  (+5 more)
(+88 files in other folders)
