[package]
name = "storyvault"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
clap = { version = "4.5.53", features = ["derive"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
