[package]
name = "storyvault"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
mp3-duration = "0.1"
image = "0.25.9"
